Fix usage access permissions issues; fix audio list fragment crash; fix percentage chart view crash

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -263,7 +263,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.16.0'
     implementation 'com.google.android.exoplayer:extension-mediasession:2.16.0'
-    implementation 'com.ramijemli.percentagechartview:percentagechartview:0.3.1'
+    implementation 'com.github.DroidsOnRoids:PercentageChartView:5a6836bd0d'
     implementation 'com.github.massoudss:waveformSeekBar:5.0.1'
     implementation 'com.github.lincollincol:amplituda:2.1.6'
     //Simple library show
